mrc RMap/RSource refactorisation

--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -176,60 +176,60 @@
     <h2 class="mt-8 mb-2">Maplibre</h2>
 
     <ul class="grid grid-cols-5 gap-2">
-      <li><a href="/src/m-00-template/index.html">00-template</a></li>
-      <li><a href="/src/m-01-cluster/index.html">01-cluster</a></li>
-      <li><a href="/src/m-02-cluster-div/index.html">02-cluster-div</a></li>
-      <li><a href="/src/m-03-popup/index.html">03-popup</a></li>
-      <li><a href="/src/m-04-satellite/index.html">04-satellite</a></li>
-      <li><a href="/src/m-05-draw/index.html">05-draw</a></li>
-      <li><a href="/src/m-06-icons/index.html">06-icons</a></li>
-      <li><a href="/src/m-07-change-layer-color/index.html">07-change-layer-color</a></li>
-      <li><a href="/src/m-08-inspect/index.html">08-inspect</a></li>
-      <li><a href="/src/m-09-toggle-style/index.html">09-toggle-style</a></li>
-      <li><a href="/src/m-10-my-popup/index.html">10-my-popup</a></li>
-      <li><a href="/src/m-11-update-path/index.html">11-update-path</a></li>
-      <li><a href="/src/m-20-hello-world/index.html">20-hello-world</a></li>
-      <li><a href="/src/m-21-draggable-marker/index.html">21-draggable-marker</a></li>
-      <li><a href="/src/m-22-animate-images/index.html">22 animate images</a></li>
-      <li><a href="/src/m-23-canvas-source/index.html">23 canvas source</a></li>
-      <li><a href="/src/m-24-custom-style/index.html">24 custom style</a></li>
+      <li><a href="/src/m/00-template/index.html">00-template</a></li>
+      <li><a href="/src/m/01-cluster/index.html">01-cluster</a></li>
+      <li><a href="/src/m/02-cluster-div/index.html">02-cluster-div</a></li>
+      <li><a href="/src/m/03-popup/index.html">03-popup</a></li>
+      <li><a href="/src/m/04-satellite/index.html">04-satellite</a></li>
+      <li><a href="/src/m/05-draw/index.html">05-draw</a></li>
+      <li><a href="/src/m/06-icons/index.html">06-icons</a></li>
+      <li><a href="/src/m/07-change-layer-color/index.html">07-change-layer-color</a></li>
+      <li><a href="/src/m/08-inspect/index.html">08-inspect</a></li>
+      <li><a href="/src/m/09-toggle-style/index.html">09-toggle-style</a></li>
+      <li><a href="/src/m/10-my-popup/index.html">10-my-popup</a></li>
+      <li><a href="/src/m/11-update-path/index.html">11-update-path</a></li>
+      <li><a href="/src/m/20-hello-world/index.html">20-hello-world</a></li>
+      <li><a href="/src/m/21-draggable-marker/index.html">21-draggable-marker</a></li>
+      <li><a href="/src/m/22-animate-images/index.html">22 animate images</a></li>
+      <li><a href="/src/m/23-canvas-source/index.html">23 canvas source</a></li>
+      <li><a href="/src/m/24-custom-style/index.html">24 custom style</a></li>
       <li>
-        <a href="/src/m-25-customize-camera-animations/index.html"
+        <a href="/src/m/25-customize-camera-animations/index.html"
           >25-customize-camera-animations</a
         >
       </li>
-      <li><a href="/src/m-26-measure-distances/index.html">26-measure-distances</a></li>
+      <li><a href="/src/m/26-measure-distances/index.html">26-measure-distances</a></li>
       <li>
-        <a href="/src/m-27-get-coordinates-mouse-pointer/index.html"
+        <a href="/src/m/27-get-coordinates-mouse-pointer/index.html"
           >27-get-coordinates-mouse-pointer</a
         >
       </li>
       <li>
-        <a href="/src/m-28-offset-the-vanishing-point/index.html">28-offset-the-vanishing-point</a>
+        <a href="/src/m/28-offset-the-vanishing-point/index.html">28-offset-the-vanishing-point</a>
       </li>
       <li>
-        <a href="/src/m-29-fly-to-a-location-based-on-scroll-position/index.html"
+        <a href="/src/m/29-fly-to-a-location-based-on-scroll-position/index.html"
           >29-fly-to-a-location-based-on-scroll-position</a
         >
       </li>
-      <li><a href="/src/m-30-set-pitch-and-bearing/index.html">30-set-pitch-and-bearing</a></li>
-      <li><a href="/src/m-31-icontrol/index.html">31 icontrol</a></li>
+      <li><a href="/src/m/30-set-pitch-and-bearing/index.html">30-set-pitch-and-bearing</a></li>
+      <li><a href="/src/m/31-icontrol/index.html">31 icontrol</a></li>
       <li>
-        <a href="/src/m-32-get-features-under-the-mouse-pointer/index.html"
+        <a href="/src/m/32-get-features-under-the-mouse-pointer/index.html"
           >32-get-features-under-the-mouse-pointer</a
         >
       </li>
-      <li><a href="/src/m-33-toggle-interactions/index.html">33-toggle-interactions</a></li>
-      <li><a href="/src/m-34-highlight-features/index.html">34-highlight-features</a></li>
-      <li><a href="/src/m-36-context-handler/index.html">36-context-handler</a></li>
-      <li><a href="/src/m-37-popup/index.html">37-popup</a></li>
-      <li><a href="/src/m-38-data-events/index.html">38-data-events</a></li>
-      <li><a href="/src/m-39-view-state/index.html">39-view-state</a></li>
-      <li><a href="/src/m-40-handlers/index.html">40-handlers</a></li>
-      <li><a href="/src/m-41-set-style-advanced/index.html">41-set-style-advanced</a></li>
-      <li><a href="/src/m-42-sprite/index.html">42-sprite</a></li>
-      <li><a href="/src/m-43-geolocation/index.html">43-geolocation</a></li>
-      <li><a href="/src/m-44-style-spec/index.html">44-style-spec</a></li>
+      <li><a href="/src/m/33-toggle-interactions/index.html">33-toggle-interactions</a></li>
+      <li><a href="/src/m/34-highlight-features/index.html">34-highlight-features</a></li>
+      <li><a href="/src/m/36-context-handler/index.html">36-context-handler</a></li>
+      <li><a href="/src/m/37-popup/index.html">37-popup</a></li>
+      <li><a href="/src/m/38-data-events/index.html">38-data-events</a></li>
+      <li><a href="/src/m/39-view-state/index.html">39-view-state</a></li>
+      <li><a href="/src/m/40-handlers/index.html">40-handlers</a></li>
+      <li><a href="/src/m/41-set-style-advanced/index.html">41-set-style-advanced</a></li>
+      <li><a href="/src/m/42-sprite/index.html">42-sprite</a></li>
+      <li><a href="/src/m/43-geolocation/index.html">43-geolocation</a></li>
+      <li><a href="/src/m/44-style-spec/index.html">44-style-spec</a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
@@ -243,14 +243,15 @@
     <h2 class="mt-8 mb-2">Vanilla</h2>
 
     <ul class="grid grid-cols-5 gap-2">
-      <div><a href="/src/vanilla-0-template/index.html">0-template</a></div>
-      <div><a href="/src/vanilla-autocomplete-simple/index.html">autocomplete-simple</a></div>
-      <div><a href="/src/vanilla-autocomplete-lazy/index.html">autocomplete-lazy</a></div>
-      <div><a href="/src/vanilla-client-point/index.html">client-point</a></div>
-      <div><a href="/src/vanilla-context-menu/index.html">context-menu</a></div>
-      <div><a href="/src/vanilla-select-1/index.html">select-1</a></div>
-      <div><a href="/src/vanilla-select-composable/index.html">select-composable</a></div>
-      <div><a href="/src/vanilla-deps/index.html">deps</a></div>
+      <div><a href="/src/vanilla/0-template/index.html">0-template</a></div>
+      <div><a href="/src/vanilla/autocomplete-simple/index.html">autocomplete-simple</a></div>
+      <div><a href="/src/vanilla/autocomplete-lazy/index.html">autocomplete-lazy</a></div>
+      <div><a href="/src/vanilla/client-point/index.html">client-point</a></div>
+      <div><a href="/src/vanilla/context-menu/index.html">context-menu</a></div>
+      <div><a href="/src/vanilla/select-1/index.html">select-1</a></div>
+      <div><a href="/src/vanilla/select-composable/index.html">select-composable</a></div>
+      <div><a href="/src/vanilla/deps/index.html">deps</a></div>
+      <div><a href="/src/vanilla/render/index.html">render</a></div>
     </ul>
   </body>
 </html>
