--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -19,15 +19,15 @@
         </a>
       </li>
       <li>
-        <a href="/src/mrc/01-map/index.html">
-          <img width="800" height="600" src="/src/mrc/01-map/screenshot.png" />
-          <div>mrc 01-map</div>
+        <a href="/src/mrc/01-rmap/index.html">
+          <img width="800" height="600" src="/src/mrc/01-rmap/screenshot.png" />
+          <div>mrc 01-rmap</div>
         </a>
       </li>
       <li>
-        <a href="/src/mrc/02-rmap/index.html">
-          <img width="800" height="600" src="/src/mrc/02-rmap/screenshot.png" />
-          <div>mrc 02-rmap</div>
+        <a href="/src/mrc/02-rmarker/index.html">
+          <img width="800" height="600" src="/src/mrc/02-rmarker/screenshot.png" />
+          <div>mrc 02-rmarker</div>
         </a>
       </li>
       <li>
