--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -229,7 +229,7 @@
       <li><a href="/src/m/42-sprite/index.html">42-sprite</a></li>
       <li><a href="/src/m/43-geolocation/index.html">43-geolocation</a></li>
       <li><a href="/src/m/44-style-spec/index.html">44-style-spec</a></li>
-      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src/m/45-contextmenu/index.html">45-contextmenu</a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
