mrc RPopup refactorisation and documentation

--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -108,6 +108,12 @@
           <div>mrc 15-use-map</div>
         </a>
       </li>
+      <li>
+        <a href="/src/mrc/16-rpopup/index.html">
+          <img width="800" height="600" src="/src/mrc/16-rpopup/screenshot.png" />
+          <div>mrc 16-rpopup</div>
+        </a>
+      </li>
     </ul>
 
     <h2 class="mt-8 mb-2">Maplibre React Components for LonLat</h2>
