--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -236,7 +236,7 @@
       <li><a href="/src/m/43-geolocation/index.html">43-geolocation</a></li>
       <li><a href="/src/m/44-style-spec/index.html">44-style-spec</a></li>
       <li><a href="/src/m/45-contextmenu/index.html">45-contextmenu</a></li>
-      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src/m/46-sandbox/index.html">46-sandbox</a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
