mrc RMap add tests

--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -114,6 +114,12 @@
           <div>mrc 16-rpopup</div>
         </a>
       </li>
+      <li>
+        <a href="/src/mrc/17-events/index.html">
+          <img width="800" height="600" src="/src/mrc/17-events/screenshot.png" />
+          <div>mrc 17-events</div>
+        </a>
+      </li>
     </ul>
 
     <h2 class="mt-8 mb-2">Maplibre React Components for LonLat</h2>
