--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body class="p-2">
-    <h2 class="mt-8 mb-2">Maplibre React Components</h2>
+    <h2 class="mb-2 mt-8">Maplibre React Components</h2>
 
     <ul class="grid grid-cols-5 gap-2">
       <li>
@@ -26,68 +26,62 @@
       </li>
       <li>
         <a href="/src/mrc/02-rmarker/index.html">
-          <img width="800" height="600" src="/src/mrc/02-rmarker/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/02-rmarker/screenshot.png"
+          />
           <div>mrc 02-rmarker</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc/03-rsource-geojson/index.html">
-          <img width="800" height="600" src="/src/mrc/03-rsource-geojson/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/03-rsource-geojson/screenshot.png"
+          />
           <div>mrc 03-rsource-geojson</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc/04-rsource-image-video/index.html">
-          <img width="800" height="600" src="/src/mrc/04-rsource-image-video/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/04-rsource-image-video/screenshot.png"
+          />
           <div>mrc 04-rsource-image-video</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc/05-rsource-raster/index.html">
-          <img width="800" height="600" src="/src/mrc/05-rsource-raster/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/05-rsource-raster/screenshot.png"
+          />
           <div>mrc 05-rsource-raster</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc/06-use-rcontrol/index.html">
-          <img width="800" height="600" src="/src/mrc/06-use-rcontrol/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/06-use-rcontrol/screenshot.png"
+          />
           <div>mrc 06-use-rcontrol</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc/07-rterrain/index.html">
-          <img width="800" height="600" src="/src/mrc/07-rterrain/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/07-rterrain/screenshot.png"
+          />
           <div>mrc 07-rterrain</div>
-        </a>
-      </li>
-      <li>
-        <a href="/src/mrc/08-pegman-llmarker/index.html">
-          <img width="800" height="600" src="/src/mrc/08-pegman-llmarker/screenshot.png" />
-          <div>mrc 08-pegman-llmarker</div>
-        </a>
-      </li>
-      <li>
-        <a href="/src/mrc/09-delimiter/index.html">
-          <img width="800" height="600" src="/src/mrc/09-delimiter/screenshot.png" />
-          <div>mrc 09-delimiter</div>
-        </a>
-      </li>
-      <li>
-        <a href="/src/mrc/10-streetview-only/index.html">
-          <img width="800" height="600" src="/src/mrc/10-streetview-only/screenshot.png" />
-          <div>mrc 10-streetview-only</div>
-        </a>
-      </li>
-      <li>
-        <a href="/src/mrc/11-streetview-vanilla/index.html">
-          <img width="800" height="600" src="/src/mrc/11-streetview-vanilla/screenshot.png" />
-          <div>mrc 11-streetview-vanilla</div>
-        </a>
-      </li>
-      <li>
-        <a href="/src/mrc/12-streetview-gmanager/index.html">
-          <img width="800" height="600" src="/src/mrc/12-streetview-gmanager/screenshot.png" />
-          <div>mrc 12-streetview-gmanager</div>
         </a>
       </li>
       <li>
@@ -96,67 +90,98 @@
           <div>mrc 13-fps</div>
         </a>
       </li>
-      <li>
-        <a href="/src/mrc/14-mount/index.html">
-          <img width="800" height="600" src="/src/mrc/14-mount/screenshot.png" />
-          <div>mrc 14-mount</div>
-        </a>
-      </li>
+
       <li>
         <a href="/src/mrc/15-use-map/index.html">
-          <img width="800" height="600" src="/src/mrc/15-use-map/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/15-use-map/screenshot.png"
+          />
           <div>mrc 15-use-map</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc/16-rpopup/index.html">
-          <img width="800" height="600" src="/src/mrc/16-rpopup/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/16-rpopup/screenshot.png"
+          />
           <div>mrc 16-rpopup</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc/17-events/index.html">
-          <img width="800" height="600" src="/src/mrc/17-events/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/17-events/screenshot.png"
+          />
           <div>mrc 17-events</div>
         </a>
       </li>
     </ul>
 
-    <h2 class="mt-8 mb-2">Maplibre React Components for LonLat</h2>
+    <h2 class="mb-2 mt-8">Maplibre React Components for LonLat</h2>
     <ul class="grid grid-cols-5 gap-2">
       <li>
         <a href="/src/mrc-lonlat/01-my-marker/index.html">
-          <img width="800" height="600" src="/src/mrc-lonlat/01-my-marker/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/01-my-marker/screenshot.png"
+          />
           <div>mrc-lonlat 01 my-marker</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc-lonlat/02-reactive-marker/index.html">
-          <img width="800" height="600" src="/src/mrc-lonlat/02-reactive-marker/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/02-reactive-marker/screenshot.png"
+          />
           <div>mrc-lonlat 02-reactive-marker</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc-lonlat/03-context-handler/index.html">
-          <img width="800" height="600" src="/src/mrc-lonlat/03-context-handler/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/03-context-handler/screenshot.png"
+          />
           <div>mrc-lonlat 03 context-handler</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc-lonlat/04-direction/index.html">
-          <img width="800" height="600" src="/src/mrc-lonlat/04-direction/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/04-direction/screenshot.png"
+          />
           <div>mrc-lonlat 04 direction</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc-lonlat/05-draggable/index.html">
-          <img width="800" height="600" src="/src/mrc-lonlat/05-draggable/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/05-draggable/screenshot.png"
+          />
           <div>mrc-lonlat 05 draggable</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc-lonlat/06-layer-switcher/index.html">
-          <img width="800" height="600" src="/src/mrc-lonlat/06-layer-switcher/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/06-layer-switcher/screenshot.png"
+          />
           <div>mrc-lonlat 06 layer-switcher</div>
         </a>
       </li>
@@ -172,19 +197,70 @@
       </li>
       <li>
         <a href="/src/mrc-lonlat/08-notifications/index.html">
-          <img width="800" height="600" src="/src/mrc-lonlat/08-notifications/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/08-notifications/screenshot.png"
+          />
           <div>mrc-lonlat 08-notifications</div>
         </a>
       </li>
       <li>
         <a href="/src/mrc-lonlat/09-geolocation/index.html">
-          <img width="800" height="600" src="/src/mrc-lonlat/09-geolocation/screenshot.png" />
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/09-geolocation/screenshot.png"
+          />
           <div>mrc-lonlat 09-geolocation</div>
+        </a>
+      </li>
+
+      <li>
+        <a href="/src/mrc-lonlat/10-streetview-only/index.html">
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/10-streetview-only/screenshot.png"
+          />
+          <div>mrc-lonlat 10-streetview-only</div>
+        </a>
+      </li>
+
+      <li>
+        <a href="/src/mrc-lonlat/12-streetview-gmanager/index.html">
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/12-streetview-gmanager/screenshot.png"
+          />
+          <div>mrc-lonlat 12-streetview-gmanager</div>
+        </a>
+      </li>
+
+      <li>
+        <a href="/src/mrc-lonlat/08-pegman-llmarker/index.html">
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/08-pegman-llmarker/screenshot.png"
+          />
+          <div>mrc-lonlat 08-pegman-llmarker</div>
+        </a>
+      </li>
+      <li>
+        <a href="/src/mrc-lonlat/09-delimiter/index.html">
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/09-delimiter/screenshot.png"
+          />
+          <div>mrc-lonlat 09-delimiter</div>
         </a>
       </li>
     </ul>
 
-    <h2 class="mt-8 mb-2">Vanilla Maplibre</h2>
+    <h2 class="mb-2 mt-8">Vanilla Maplibre</h2>
 
     <ul class="grid grid-cols-5 gap-2">
       <li><a href="/src/m/00-template/index.html">00-template</a></li>
@@ -194,14 +270,23 @@
       <li><a href="/src/m/04-satellite/index.html">04-satellite</a></li>
       <li><a href="/src/m/05-draw/index.html">05-draw</a></li>
       <li><a href="/src/m/06-icons/index.html">06-icons</a></li>
-      <li><a href="/src/m/07-change-layer-color/index.html">07-change-layer-color</a></li>
+      <li>
+        <a href="/src/m/07-change-layer-color/index.html"
+          >07-change-layer-color</a
+        >
+      </li>
       <li><a href="/src/m/08-inspect/index.html">08-inspect</a></li>
       <li><a href="/src/m/09-toggle-style/index.html">09-toggle-style</a></li>
       <li><a href="/src/m/10-my-popup/index.html">10-my-popup</a></li>
       <li><a href="/src/m/11-update-path/index.html">11-update-path</a></li>
+      <li><a href="/src/m/14-mount/index.html"> 14-mount </a></li>
       <li><a href="/src/m/20-hello-world/index.html">20-hello-world</a></li>
-      <li><a href="/src/m/21-draggable-marker/index.html">21-draggable-marker</a></li>
-      <li><a href="/src/m/22-animate-images/index.html">22 animate images</a></li>
+      <li>
+        <a href="/src/m/21-draggable-marker/index.html">21-draggable-marker</a>
+      </li>
+      <li>
+        <a href="/src/m/22-animate-images/index.html">22 animate images</a>
+      </li>
       <li><a href="/src/m/23-canvas-source/index.html">23 canvas source</a></li>
       <li><a href="/src/m/24-custom-style/index.html">24 custom style</a></li>
       <li>
@@ -209,35 +294,60 @@
           >25-customize-camera-animations</a
         >
       </li>
-      <li><a href="/src/m/26-measure-distances/index.html">26-measure-distances</a></li>
+      <li>
+        <a href="/src/m/26-measure-distances/index.html"
+          >26-measure-distances</a
+        >
+      </li>
       <li>
         <a href="/src/m/27-get-coordinates-mouse-pointer/index.html"
           >27-get-coordinates-mouse-pointer</a
         >
       </li>
       <li>
-        <a href="/src/m/28-offset-the-vanishing-point/index.html">28-offset-the-vanishing-point</a>
+        <a href="/src/m/28-offset-the-vanishing-point/index.html"
+          >28-offset-the-vanishing-point</a
+        >
       </li>
       <li>
-        <a href="/src/m/29-fly-to-a-location-based-on-scroll-position/index.html"
+        <a
+          href="/src/m/29-fly-to-a-location-based-on-scroll-position/index.html"
           >29-fly-to-a-location-based-on-scroll-position</a
         >
       </li>
-      <li><a href="/src/m/30-set-pitch-and-bearing/index.html">30-set-pitch-and-bearing</a></li>
+      <li>
+        <a href="/src/m/30-set-pitch-and-bearing/index.html"
+          >30-set-pitch-and-bearing</a
+        >
+      </li>
       <li><a href="/src/m/31-icontrol/index.html">31 icontrol</a></li>
       <li>
         <a href="/src/m/32-get-features-under-the-mouse-pointer/index.html"
           >32-get-features-under-the-mouse-pointer</a
         >
       </li>
-      <li><a href="/src/m/33-toggle-interactions/index.html">33-toggle-interactions</a></li>
-      <li><a href="/src/m/34-highlight-features/index.html">34-highlight-features</a></li>
-      <li><a href="/src/m/36-context-handler/index.html">36-context-handler</a></li>
+      <li>
+        <a href="/src/m/33-toggle-interactions/index.html"
+          >33-toggle-interactions</a
+        >
+      </li>
+      <li>
+        <a href="/src/m/34-highlight-features/index.html"
+          >34-highlight-features</a
+        >
+      </li>
+      <li>
+        <a href="/src/m/36-context-handler/index.html">36-context-handler</a>
+      </li>
       <li><a href="/src/m/37-popup/index.html">37-popup</a></li>
       <li><a href="/src/m/38-data-events/index.html">38-data-events</a></li>
       <li><a href="/src/m/39-view-state/index.html">39-view-state</a></li>
       <li><a href="/src/m/40-handlers/index.html">40-handlers</a></li>
-      <li><a href="/src/m/41-set-style-advanced/index.html">41-set-style-advanced</a></li>
+      <li>
+        <a href="/src/m/41-set-style-advanced/index.html"
+          >41-set-style-advanced</a
+        >
+      </li>
       <li><a href="/src/m/42-sprite/index.html">42-sprite</a></li>
       <li><a href="/src/m/43-geolocation/index.html">43-geolocation</a></li>
       <li><a href="/src/m/44-style-spec/index.html">44-style-spec</a></li>
@@ -251,18 +361,40 @@
       <li><a href="/src//index.html"></a></li>
     </ul>
 
-    <h2 class="mt-8 mb-2">Vanilla</h2>
+    <h2 class="mb-2 mt-8">Vanilla</h2>
 
     <ul class="grid grid-cols-5 gap-2">
       <div><a href="/src/vanilla/0-template/index.html">0-template</a></div>
-      <div><a href="/src/vanilla/autocomplete-simple/index.html">autocomplete-simple</a></div>
-      <div><a href="/src/vanilla/autocomplete-lazy/index.html">autocomplete-lazy</a></div>
+      <div>
+        <a href="/src/vanilla/autocomplete-simple/index.html"
+          >autocomplete-simple</a
+        >
+      </div>
+      <div>
+        <a href="/src/vanilla/autocomplete-lazy/index.html"
+          >autocomplete-lazy</a
+        >
+      </div>
       <div><a href="/src/vanilla/client-point/index.html">client-point</a></div>
       <div><a href="/src/vanilla/context-menu/index.html">context-menu</a></div>
       <div><a href="/src/vanilla/select-1/index.html">select-1</a></div>
-      <div><a href="/src/vanilla/select-composable/index.html">select-composable</a></div>
+      <div>
+        <a href="/src/vanilla/select-composable/index.html"
+          >select-composable</a
+        >
+      </div>
       <div><a href="/src/vanilla/deps/index.html">deps</a></div>
       <div><a href="/src/vanilla/render/index.html">render</a></div>
+      <li>
+        <a href="/src/vanilla/streetview/index.html">
+          <img
+            width="800"
+            height="600"
+            src="/src/vanilla/streetview/screenshot.png"
+          />
+          <div>streetview</div>
+        </a>
+      </li>
     </ul>
   </body>
 </html>
