update sandbox with GradientMarker

--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -85,6 +85,26 @@
         </a>
       </li>
       <li>
+        <a href="/src/mrc/08-rgradient-marker/index.html">
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/08-rgradient-marker/screenshot.png"
+          />
+          <div>mrc 08-rgradient-marker</div>
+        </a>
+      </li>
+      <li>
+        <a href="/src/mrc/09-reactive-rgradient-marker/index.html">
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/09-reactive-rgradient-marker/screenshot.png"
+          />
+          <div>mrc 09-reactive-rgradient-marker</div>
+        </a>
+      </li>
+      <li>
         <a href="/src/mrc/13-fps/index.html">
           <img width="800" height="600" src="/src/mrc/13-fps/screenshot.png" />
           <div>mrc 13-fps</div>
@@ -125,26 +145,6 @@
 
     <h2 class="mb-2 mt-8">Maplibre React Components for LonLat</h2>
     <ul class="grid grid-cols-5 gap-2">
-      <li>
-        <a href="/src/mrc-lonlat/01-my-marker/index.html">
-          <img
-            width="800"
-            height="600"
-            src="/src/mrc-lonlat/01-my-marker/screenshot.png"
-          />
-          <div>mrc-lonlat 01 my-marker</div>
-        </a>
-      </li>
-      <li>
-        <a href="/src/mrc-lonlat/02-reactive-marker/index.html">
-          <img
-            width="800"
-            height="600"
-            src="/src/mrc-lonlat/02-reactive-marker/screenshot.png"
-          />
-          <div>mrc-lonlat 02-reactive-marker</div>
-        </a>
-      </li>
       <li>
         <a href="/src/mrc-lonlat/03-context-handler/index.html">
           <img
