--- a/apps/sandbox/src/mrc/18-css/index.html
+++ b/apps/sandbox/src/mrc/18-css/index.html
@@ -1,16 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
-</head>
+  <body>
+    <div class="grid grid-cols-2">
+      <iframe
+        src="http://localhost:5173/src/mrc/18-css/classic.html"
+        width="100%"
+        height="464"
+      ></iframe>
+      <iframe
+        src="http://localhost:5173/src/mrc/18-css/pentatrion.html"
+        width="100%"
+        height="464"
+      ></iframe>
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="./main.tsx"></script>
-</body>
-
+      <iframe
+        src="http://localhost:5173/src/mrc/18-css/modern.html"
+        width="100%"
+        height="464"
+      ></iframe>
+      <iframe
+        src="http://localhost:5173/src/mrc/18-css/dark.html"
+        width="100%"
+        height="464"
+      ></iframe>
+    </div>
+    <script type="module" src="./tw.tsx"></script>
+  </body>
 </html>
