maplibre-theme add optimized theme

--- a/apps/sandbox/src/mrc/18-css/index.html
+++ b/apps/sandbox/src/mrc/18-css/index.html
@@ -5,32 +5,49 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <link rel="stylesheet" href="./index.scss" />
   </head>
 
   <body>
     <div class="grid grid-cols-2">
-      <iframe
+      <!-- <iframe
         src="http://localhost:5173/src/mrc/18-css/classic.html"
         width="100%"
         height="564"
-      ></iframe>
+      ></iframe> -->
       <iframe
-        src="http://localhost:5173/src/mrc/18-css/pentatrion.html"
+        src="http://localhost:5173/src/mrc/18-css/optimized.html"
         width="100%"
         height="564"
       ></iframe>
-
+      <iframe
+        src="http://localhost:5173/src/mrc/18-css/optimized-dark.html"
+        width="100%"
+        height="564"
+      ></iframe>
+      <iframe
+        src="http://localhost:5173/src/mrc/18-css/optimized.html?classes=light-forced"
+        width="100%"
+        height="564"
+      ></iframe>
+      <iframe
+        src="http://localhost:5173/src/mrc/18-css/optimized.html?classes=dark-forced"
+        width="100%"
+        height="564"
+      ></iframe>
+      <!--
       <iframe
         src="http://localhost:5173/src/mrc/18-css/modern.html"
         width="100%"
         height="564"
       ></iframe>
       <iframe
-        src="http://localhost:5173/src/mrc/18-css/dark.html"
+        src="http://localhost:5173/src/mrc/18-css/modern-dark.html"
         width="100%"
         height="564"
-      ></iframe>
+      ></iframe> -->
     </div>
+
     <script type="module" src="./tw.tsx"></script>
   </body>
 </html>
