--- a/apps/sandbox/src/mrc/18-css/modern.html
+++ b/apps/sandbox/src/mrc/18-css/modern.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
 
-  <body class="modern light">
+  <body class="modern">
     <div id="root"></div>
     <script type="module" src="./modern.tsx"></script>
   </body>
