--- a/apps/sandbox/src/mrc/18-css/modern-dark.html
+++ b/apps/sandbox/src/mrc/18-css/modern-dark.html
@@ -7,8 +7,8 @@
     <title>Vite + React + TS</title>
   </head>
 
-  <body class="classic">
+  <body class="modern dark">
     <div id="root"></div>
-    <script type="module" src="./classic.tsx"></script>
+    <script type="module" src="./modern-dark.tsx"></script>
   </body>
 </html>
