ml theme fix issus classic theme

--- a/apps/sandbox/src/mrc/18-css/classic-dark.html
+++ b/apps/sandbox/src/mrc/18-css/classic-dark.html
@@ -7,8 +7,8 @@
     <title>Vite + React + TS</title>
   </head>
 
-  <body class="optimized dark">
+  <body class="classic dark">
     <div id="root"></div>
-    <script type="module" src="./optimized-dark.tsx"></script>
+    <script type="module" src="./classic-dark.tsx"></script>
   </body>
 </html>
