--- a/apps/sandbox/src/mrc/18-css/classic.html
+++ b/apps/sandbox/src/mrc/18-css/classic.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
 
-  <body class="classic">
+  <body class="legacy">
     <div id="root"></div>
     <script type="module" src="./classic.tsx"></script>
   </body>
