--- a/apps/sandbox/src/mrc/18-css/legacy.html
+++ b/apps/sandbox/src/mrc/18-css/legacy.html
@@ -7,8 +7,8 @@
     <title>Vite + React + TS</title>
   </head>
 
-  <body class="optimized">
+  <body class="legacy">
     <div id="root"></div>
-    <script type="module" src="./optimized.tsx"></script>
+    <script type="module" src="./legacy.tsx"></script>
   </body>
 </html>
