mrc-doc add tutorial

--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -105,6 +105,16 @@
         </a>
       </li>
       <li>
+        <a href="/src/mrc/10-use-control/index.html">
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc/10-use-control/screenshot.png"
+          />
+          <div>mrc 10-use-control</div>
+        </a>
+      </li>
+      <li>
         <a href="/src/mrc/13-fps/index.html">
           <img width="800" height="600" src="/src/mrc/13-fps/screenshot.png" />
           <div>mrc 13-fps</div>
