--- a/apps/sandbox/src/mrc/18-css/index.html
+++ b/apps/sandbox/src/mrc/18-css/index.html
@@ -9,57 +9,12 @@
   </head>
 
   <body>
-    <div class="grid grid-cols-2">
-      <iframe
-        src="http://localhost:5173/src/mrc/18-css/classic.html"
-        width="100%"
-        height="564"
-      ></iframe>
-      <iframe
-        src="http://localhost:5173/src/mrc/18-css/classic-dark.html"
-        width="100%"
-        height="564"
-      ></iframe>
-      <iframe
-        src="http://localhost:5173/src/mrc/18-css/classic.html?classes=light-forced"
-        width="100%"
-        height="564"
-      ></iframe>
-      <iframe
-        src="http://localhost:5173/src/mrc/18-css/classic.html?classes=dark-forced"
-        width="100%"
-        height="564"
-      ></iframe>
-
-      <iframe
-        src="http://localhost:5173/src/mrc/18-css/modern.html"
-        width="100%"
-        height="564"
-      ></iframe>
-      <iframe
-        src="http://localhost:5173/src/mrc/18-css/modern-dark.html"
-        width="100%"
-        height="564"
-      ></iframe>
-
-      <iframe
-        src="http://localhost:5173/src/mrc/18-css/modern.html?classes=light-forced"
-        width="100%"
-        height="564"
-      ></iframe>
-      <iframe
-        src="http://localhost:5173/src/mrc/18-css/modern.html?classes=dark-forced"
-        width="100%"
-        height="564"
-      ></iframe>
-
-      <iframe
-        src="http://localhost:5173/src/mrc/18-css/legacy.html"
-        width="100%"
-        height="564"
-      ></iframe>
-    </div>
-
-    <script type="module" src="./tw.tsx"></script>
+    <div id="root"></div>
+    <!-- <iframe
+      src="http://localhost:5173/src/mrc/18-css/legacy.html"
+      width="100%"
+      height="564"
+    ></iframe> -->
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
