--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="module" src="./src/main.css"></script>
+    <script type="module" src="./src/shared/tailwind.css"></script>
   </head>
 
   <body class="p-2">
