route elevation performances enhancements, pois more accurate

--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -12,6 +12,17 @@
     <h2 class="mb-2 mt-8">Maplibre React Components for LonLat</h2>
     <ul class="grid grid-cols-5 gap-2">
       <li>
+        <a href="/src/mrc-lonlat/00/index.html">
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/00/screenshot.png"
+          />
+          <div>mrc-lonlat 00</div>
+        </a>
+      </li>
+
+      <li>
         <a href="/src/mrc-lonlat/03-context-handler/index.html">
           <img
             width="800"
@@ -122,6 +133,16 @@
             src="/src/mrc-lonlat/09-delimiter/screenshot.png"
           />
           <div>mrc-lonlat 09-delimiter</div>
+        </a>
+      </li>
+      <li>
+        <a href="/src/mrc-lonlat/13-pois/index.html">
+          <img
+            width="800"
+            height="600"
+            src="/src/mrc-lonlat/13-pois/screenshot.png"
+          />
+          <div>mrc-lonlat 13-pois</div>
         </a>
       </li>
     </ul>
