--- a/apps/front/index.html
+++ b/apps/front/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
-<html lang="fr" class="w-full h-full">
+<html lang="fr" class="h-full w-full overflow-hidden">
   <head>
     <meta charset="UTF-8" />
     <title>LonLat</title>
-    <meta name="description" content="Afficher une carte de votre environnement." />
+    <meta
+      name="description"
+      content="Afficher une carte de votre environnement."
+    />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -16,8 +19,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
-  <body class="w-full h-full">
-    <div id="root" class="w-full h-full"></div>
+  <body class="h-full w-full">
+    <div id="root" class="h-full w-full"></div>
     <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
