--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -272,6 +272,7 @@
       </div>
       <div><a href="/src/vanilla/deps/index.html">deps</a></div>
       <div><a href="/src/vanilla/render/index.html">render</a></div>
+      <div><a href="/src/vanilla/peakfinder/index.html">peakfinder</a></div>
       <li>
         <a href="/src/vanilla/streetview/index.html">
           <img
