front resizebar enhancement for smartphone

--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -273,6 +273,8 @@
       <div><a href="/src/vanilla/deps/index.html">deps</a></div>
       <div><a href="/src/vanilla/render/index.html">render</a></div>
       <div><a href="/src/vanilla/peakfinder/index.html">peakfinder</a></div>
+      <div><a href="/src/vanilla/slide-bar/index.html">slide-bar</a></div>
+
       <li>
         <a href="/src/vanilla/streetview/index.html">
           <img
