add deploy github pages workflow

--- a/apps/sandbox/index.html
+++ b/apps/sandbox/index.html
@@ -240,7 +240,10 @@
       <li><a href="/src/m/44-style-spec/index.html">44-style-spec</a></li>
       <li><a href="/src/m/45-contextmenu/index.html">45-contextmenu</a></li>
       <li><a href="/src/m/46-sandbox/index.html">46-sandbox</a></li>
-      <li><a href="/src//index.html"></a></li>
+      <li><a href="/src/m/47-custom-layer/index.html">47-custom-layer</a></li>
+      <li>
+        <a href="/src/m/48-custom-windmap/index.html">48-custom-windmap</a>
+      </li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
       <li><a href="/src//index.html"></a></li>
